--- a/symfony_project/composer.json
+++ b/symfony_project/composer.json
@@ -7,14 +7,25 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.6",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.12",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
+        "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
-        "symfony/yaml": "6.0.*"
+        "symfony/security-bundle": "6.0.*",
+        "symfony/twig-bundle": "6.0.*",
+        "symfony/validator": "6.0.*",
+        "symfony/var-dumper": "6.0.*",
+        "symfony/yaml": "6.0.*",
+        "symfonycasts/verify-email-bundle": "^1.10"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.42"
     },
     "config": {
         "allow-plugins": {
