--- a/symfony_project/config/packages/security.yaml
+++ b/symfony_project/config/packages/security.yaml
@@ -17,6 +17,17 @@ security:
             lazy: true
             provider: app_user_provider
 
+            form_login:
+                # "login" is the name of the route created previously
+                login_path: login
+                check_path: login
+
+            logout:
+                path: logout
+
+                # where to redirect after logout
+                target: login
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
