--- a/symfony_project/composer.json
+++ b/symfony_project/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
@@ -22,7 +23,9 @@
         "symfony/validator": "6.0.*",
         "symfony/var-dumper": "6.0.*",
         "symfony/yaml": "6.0.*",
-        "symfonycasts/verify-email-bundle": "^1.10"
+        "symfonycasts/verify-email-bundle": "^1.10",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.42",
