--- a/symfony_project/composer.json
+++ b/symfony_project/composer.json
@@ -16,6 +16,8 @@
         "symfony/flex": "^2",
         "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/google-mailer": "6.0.*",
+        "symfony/mailer": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
@@ -23,6 +25,7 @@
         "symfony/validator": "6.0.*",
         "symfony/var-dumper": "6.0.*",
         "symfony/yaml": "6.0.*",
+        "symfonycasts/reset-password-bundle": "^1.13",
         "symfonycasts/verify-email-bundle": "^1.10",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
