--- a/symfony_project/.env
+++ b/symfony_project/.env
@@ -26,3 +26,8 @@ APP_SECRET=1f39b1b083280c0a857c75faf5f391eb
 DATABASE_URL="mysql://root:@127.0.0.1:3306/NoteTaker?serverVersion=mariadb-10.4.24&charset=utf8mb4"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://abderrahmanbns21@gmail.com:AB%40L637386@default
+###< symfony/google-mailer ###
